Opened 18 years ago
Closed 18 years ago
#1009 closed bug (fixed)
Window not updated that opens Print Page Setup dialog
Reported by: | laplace | Owned by: | laplace |
---|---|---|---|
Priority: | high | Milestone: | R1 |
Component: | Printing | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
The window (e.g. StyledEdit) that uses a BPrintJob to open a print page setup dialg is not updated when the dialog is displayed.
BPrintJob does not open the dialog itself. Instead it sends a message to the print_server and blocks until it gets a response.
TODO check behaviour in BeOS R5.
Note:
See TracTickets
for help on using tickets.
Fixed in hrev20075. Took implementation from BAlert.Go() as an example.