* Fixed bug #1009. Update window while in BPrintJob.ConfigPage() or ConfigPage(). * Set mime type of spool file so print_server accepts the file.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@20075 a95241bf-73f2-0310-859d-f6bbb57e9c96